--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "lazyload",
+  "name": "react-photo-feed",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "start": "webpack-dev-server --port 8081 --hot --inline --config webpack.config.debug.js --content-base debug/ ",
     "build": "webpack --config webpack.config.production.js "
@@ -16,21 +16,17 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-react-hmre": "^1.1.0",
     "babel-preset-stage-0": "^6.5.0",
-    "cross-env": "^1.0.7",
     "css-loader": "^0.23.1",
+    "events": "^1.1.0",
     "extract-text-webpack-plugin": "^1.0.1",
+    "flux": "^2.1.1",
     "jquery": "^2.2.2",
-    "material-ui": "^0.15.0-alpha.2",
-    "react-images": "^0.3.2",
-    "react-lightbox": "^0.4.0",
-    "react-radio-group": "^2.2.0",
     "style-loader": "^0.13.0",
     "webpack": "^1.12.14",
-    "webpack-dev-server": "^1.14.1",
-    "whatwg-fetch": "^0.11.0"
+    "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
-    "react": "^0.14.7",
-    "react-dom": "^0.14.7"
+    "react": "^15.0.0-rc.2",
+    "react-dom": "^15.0.0-rc.2"
   }
 }
