--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
+    "prop-types": "^15.5.10",
     "react": "^15.0.0-rc.2",
     "react-dom": "^15.0.0-rc.2"
   }
